bug fix in the vme_geo of the MUSICS

--- a/src/Makefile
+++ b/src/Makefile
@@ -14,7 +14,7 @@ DOOPTIMIZATION = false
 all: build
 
 -include Module.mk
-CXXFLAGS += -std=c++17
+#CXXFLAGS += -std=c++17
 
 build: all-$(MODULE_NAME)
 
