Added get_bits() function for V1190 in TPC crate, added MyOwnStep

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,14 @@
 src/*.o
 src/*.so
 src/*.d
-
+libGo4UserAnalysis*
 # In case of hanging swap files ... *wink*
 src/*.swp
+src/.*
+src/#*
 *.lmd
 lmd/*
 MainUserAnalysis
+martin*
+*.so
+*.pcm
